# AdventOfCode2021

./: .gitignore  CMakeLists.txt  README.md  build_and_run_all_days.sh
.github/workflows/: build_and_run.yml
Common/: CMakeLists.txt  stringoperations.cpp  stringoperations.hpp  vectoroperations.cpp  vectoroperations.hpp
Day01/: CMakeLists.txt  day1.cpp
Day02/: CMakeLists.txt  day2.cpp
Day03/: CMakeLists.txt  day3.cpp
Day04/: CMakeLists.txt  bingo.cpp  bingocard.cpp  bingocard.hpp  day4.cpp
Day05/: CMakeLists.txt  day5.cpp
Day06/: CMakeLists.txt  day6.cpp
Day07/: CMakeLists.txt  day7.cpp
Day08/: CMakeLists.txt  day8.cpp
Day09/: CMakeLists.txt  day9.cpp
Day10/: CMakeLists.txt  day10.cpp
Day11/: CMakeLists.txt  day11.cpp
Day12/: CMakeLists.txt  day12.cpp
Day13/: CMakeLists.txt  day13.cpp
Day14/: CMakeLists.txt  day14.cpp
Day15/: CMakeLists.txt  day15.cpp
Day16/: CMakeLists.txt  day16.cpp
Day17/: CMakeLists.txt  day17.cpp
Day18/: CMakeLists.txt  day18.cpp
Day19/: CMakeLists.txt  day19.cpp
Day20/: CMakeLists.txt  day20.cpp
Day21/: CMakeLists.txt  day21.cpp
Day22/: CMakeLists.txt  cube.cpp  day22.cpp
Day23/: CMakeLists.txt
Day24/: CMakeLists.txt  alu.cpp  day24.cpp
Day25/: CMakeLists.txt  day25.cpp
InputFiles/: day23.txt  day23_2.txt
